--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 section{
     height: 100vh;
 }
+
 #intro-section{
     background:url(./images/assets/backgrounds/h_img.jpg) center center;
     background-size: cover;
     color: white;
+}
+
+#services{
+    background: url(./images/assets/backgrounds/s_image.jpg)
 }
