--- a/style.css
+++ b/style.css
@@ -9,5 +9,6 @@ section{
 }
 
 #services{
-    background: url(./images/assets/backgrounds/s_image.jpg)
+    background: url(./images/assets/backgrounds/s_image.jpg) center center;
+    background-size: cover;
 }
